--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,5 @@
 {
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-  "builds": [
-    { "src": "package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
